--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "morgan": "^1.10.0"
   }
 }
